syntax = "proto3";

package tests.message;

import "patch/go.proto";

option go_package = "github.com/liov/protopatch2/tests/message";

message MessageWithTags {
	string value = 1 [(go.field) = {tags: 'test:"value"'}];
}

message OuterMessageWithTags {
	message InnerMessage {
		string value = 1 [(go.field) = {tags: 'test:"value"'}];
	}
}
